force-app/main/default/objects/VisitDialogTabSettings__mdt/VisitDialogTabSettings__mdt.object-meta.xml
<CustomObject>
    <label>Visit Dialog Tab Settings</label>
    <pluralLabel>Visit Dialog Tab Settings</pluralLabel>
</CustomObject>