force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/ActivityDNFieldName__c.field-meta.xml
<CustomField>
    <fullName>ActivityDNFieldName__c</fullName>
    <label>Activity DN Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>