force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/ActivityPDLFieldName__c.field-meta.xml
<CustomField>
    <fullName>ActivityPDLFieldName__c</fullName>
    <label>Activity PDL Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>