force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/DNAccountFields__c.field-meta.xml
<CustomField>
    <fullName>DNAccountFields__c</fullName>
    <label>DN Account Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>