force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/PDLAccountFields__c.field-meta.xml
<CustomField>
    <fullName>PDLAccountFields__c</fullName>
    <label>PDL Account Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>