force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/TabOrder__c.field-meta.xml
<CustomField>
    <fullName>TabOrder__c</fullName>
    <label>Tab Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>