force-app/main/default/objects/VisitDialogTabSettings__mdt/fields/VisitDialogLayout__c.field-meta.xml
<CustomField>
    <fullName>VisitDialogLayout__c</fullName>
    <label>Visit Dialog Layout</label>
    <referenceTo>VisitDialogLayoutSettings__mdt</referenceTo>
    <relationshipLabel>Visit Dialog Tab Settings</relationshipLabel>
    <relationshipName>VisitDialogTabSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>